Reorganize html layout and add fixed header along with horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ section {
     -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-h1 {
+.title {
     font-size: 30px;
     color: #fff;
     text-transform: uppercase;
@@ -31,22 +31,16 @@ h1 {
 }
 
 table {
-    width: 100%;
     table-layout: fixed;
-}
-
-.header {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
-.content {
-    height: 600px;
-    overflow-x: auto;
-    margin-top: 0px;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 th {
+    background-color: rgba(255, 255, 255, 0.2);
+    min-width: 200px;
     padding: 20px 15px;
     text-align: left;
     font-weight: 500;
@@ -56,6 +50,7 @@ th {
 }
 
 td {
+    min-width: 200px;
     padding: 15px;
     margin-right: 5px;
     text-align: left;
@@ -75,4 +70,21 @@ td {
 .fa {
     cursor: pointer;
     margin-right: 10px;
+}
+
+/*seperates the header from the body allowing it to be positioned*/
+thead {
+    position: relative;
+    display: block;
+    overflow: visible;
+}
+
+/*seperates the tbody from the header*/
+tbody {
+    position: relative;
+    display: block;
+    width: 91vw;
+    min-height: 100px;
+    max-height: 600px;
+    overflow: scroll;
 }
